@@ -1,4 +1,6 @@
-﻿2019-09-12 [2.1.2]
+﻿2019-09-17 [2.1.3]
+* the latest video section shows the show
+2019-09-12 [2.1.2]
  * Latest video section
  * Bump version
 2019-09-11 [2.0.7]
